# audiotranscriber

./: .gitignore  .pypirc  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  tests.yml
src/: logger_config.py  text_processor.py  train.py  transcriber.py
src/audiotranscriber/: cli.py  text_processor.py  transcriber.py
src/audiotranscriber.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/audiotranscriber/nlp/: vectorize.py
src/audiotranscriptor.egg-info/: PKG-INFO
src/nlp/: nltk_tokenizer.py  preprocessor.py  spacy_tokenizer.py
tests/: test_cli.py  test_preprocessor.py  test_text_processor.py  test_transcriber.py
