[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audiotranscriber"
version = "0.1.0"
description = "Transcrição e processamento de áudio"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Wagner Andrade", email = "andradewagner@hotmail.com" }
]

keywords = [
    "whisper",
    "speech-to-text",
    "nlp",
    "audio-processing",
    "machine-learning",
    "faiss",
    "spacy",
    "nltk",
    "embeddings"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "openai-whisper",
    "spacy>=3.0",
    "nltk",
    "sentence-transformers",
    "faiss-cpu",
    "typer",
    "pydantic",
    "pyyaml",
    "tqdm",
    "numpy",
    "pydub",
]

[project.urls]
Homepage = "https://github.com/andradewagner/audiotranscriber"
Repository = "https://github.com/andradewagner/audiotranscriber"

[project.scripts]
audiotranscriber = "audiotranscriber.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]